# VolumeViewerPlugin

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  conanfile.py  vcpkg.json
.github/workflows/: build.yml
res/: ViewerResources.qrc
res/shaders/: CubeDraw.frag  CubeDraw.vert  StereoMerge.frag  VolumeDraw.frag  points.frag
src/: ColoringAction.cpp  ColoringAction.h  ColoringActionPointCloud.cpp  ColoringActionPointCloud.h  DimensionAction.cpp  DimensionAction.h  PositionAction.cpp  PositionAction.h  RendererSettingsAction.cpp  RendererSettingsAction.h  SelectedPointsAction.cpp  SelectedPointsAction.h  SettingsAction.cpp  SettingsAction.h  SlicingAction.cpp  SlicingAction.h  ThresholdAction.cpp  ThresholdAction.h  Tracker.cpp  Tracker.h  TransferPointModel.cpp  TransferPointModel.h  TransferWidget.cpp  TransferWidget.h  Viewer3DPlugin.cpp  Viewer3DPlugin.h  Viewer3DPlugin.json  ViewerWidget.cpp  ViewerWidget.h  ViewerWidget.ui  VolumeRenderer.cpp  VolumeRenderer.h  VolumeRendererWidget.cpp  VolumeRendererWidget.h  VolumeViewerPlugin.cpp  VolumeViewerPlugin.h  VolumeViewerPlugin.json  common.h
src/Actions/: PickRendererAction.cpp  PickRendererAction.h
src/Renderer/OpenGL/: OpenGLRendererWidget.cpp  OpenGLRendererWidget.h  VolumeRenderer.cpp  VolumeRenderer.h  VolumeRendererWidget.h
src/Transfer/: CustomColorMapEditor.cpp  CustomColorMapEditor.h  Edge.cpp  Edge.h  Node.cpp  Node.h  NodeControlAction.cpp  NodeControlAction.h  TransferColoringAction.cpp  TransferColoringAction.h  TransferFunctionControlAction.cpp  TransferFunctionControlAction.h  TransferSettingsAction.cpp  TransferSettingsAction.h  TransferView.cpp  TransferView.h  TransferWidget.cpp  TransferWidget.h  TransferWidget2.cpp  TransferWidget2.h
src/Widgets/: VolumeViewerWidget.cpp  VolumeViewerWidget.h
